[package]
name = "rsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.25"
bollard = "0.13"
druid = "0.7"
iced = { version = "0.5", default-features = false, features = ["glow"] }
